--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="pages/file_solving.html">Solve file</a>
                 <a class="nav-link" href="pages/translation.html">AI Translation</a>
                 <a class="nav-link" href="pages/text_analyzing.html">Text analyzing</a>
+                <a class="nav-link" href="pages/history.html">History</a>
             </div>
             </div>
         </nav>
