--- a/pages/text_analyzing.html
+++ b/pages/text_analyzing.html
@@ -26,6 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="file_solving.html">Solve file</a>
                 <a class="nav-link" href="translation.html">AI Translation</a>
                 <a class="nav-link" href="text_analyzing.html">Text analyzing</a>
+                <a class="nav-link" href="history.html">History</a>
             </div>
             </div>
         </nav>
