--- a/pages/history.html
+++ b/pages/history.html
@@ -8,9 +8,9 @@
     <link rel="shortcut icon" href="/assets/logo.png"/>
     <script src="/script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>File solving</title>
+    <title>History</title>
 </head>
-<body>
+<body onload="fillTable()">
     <div id="particles-js"></div>
     <div style="border-bottom: 1px solid black; ">
         <nav class="navbar navbar-expand-lg bg-light">
@@ -31,14 +31,23 @@
             </div>
         </nav>
     </div>
-    <div style="margin: auto; margin-top: 100px; width: 700px; border: 1px solid black; padding: 25px; border-radius: 10px; background-color: white; position: relative;">
-        <label for="formFile" class="form-label">JPG, PNG, or PDF </label>
-        <div class="mb-3" style="display: flex">
-            <input class="form-control" accept="image/png, image/jpg, image/jpeg, application/pdf" type="file" id="image-input" style="max-width: 400px" />
-            <a class="btn btn-primary btn-large" type="button" onclick="sendFile()" style="margin-left: 110px; min-width: 140px; ">Send</a>
-        </div>
-        <div class="card" style="height: 350px; width: 650px; overflow: auto;" id="result"></div>  
-    </div>
+    <table class="table table-info" id="historyTable">
+        <h2 style="margin: 10px;">History of all requests</h2>
+        <thead>
+          <tr>
+                <th>Type</th>
+                <th>Request</th>
+                <th>Response</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
     <script src="/assets/particles.js"></script>
     <script src="/assets/app.js"></script>
 </body>
